--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
+    "imports-loader": "^0.8.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
     "sass": "^1.5.1",
