--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "imports-loader": "^0.8.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
-    "imports-loader": "^0.8.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
     "sass": "^1.5.1",
